CHANGES.txt - 07/18/2001
------------------------

CHANGES IN CUPS V1.1.10

	- Added a driver for DYMO label printers.
	- The serial backend now limits writes to 1/10th
	  second worth of data to avoid buffer overflows
	  with some types of flow control.
	- The scheduler did not properly process PUT requests,
	  so configuration files could not be uploaded to the
	  server.
	- The scheduler did not strip trailing whitespace on
	  lines in the configuration files.
	- The httpWrite() function did not transition the PUT
	  request to the HTTP_STATUS state to get the status
	  from the server.
	- The scheduler did not properly handle trailing null
	  ("-") filters when testing a driver that sent data
	  to the file: pseudo-backend.


CHANGES IN CUPS V1.1.9-1

	- The configure script did not substitute the
	  correct user and group names.
	- The configure script did not use the full path
	  to the install-sh script when it was used.
	- The pstoraster filter did not correctly support
	  DuplexTumble mode for printers that used flip
	  duplexing.
	- The cups.list.in file was missing from the
	  distribution.
	- The New DeskJet series driver did not use the
	  correct OrderDependency for the Duplex option.
	- Use read() instead of fread() to read piped
	  print files in lpr/lp.  This avoids a bug in the
	  HP-UX 10.20 fread() function.


CHANGES IN CUPS V1.1.9

	- Revamped the configure script to use a modular
	  approach for the various tests.
	- Added --with-openssl-* options to properly reference
	  the OpenSSL libraries in DSOs.
	- Added --with-cups-user and --with-cups-group
	  options to specify the default user and group for
	  CUPS.
	- Added AIX shared library support.
	- Added AIX device discovery for the serial and
	  parallel ports.
	- Now use install program or script to install
	  directories, files, and symlinks.
	- Updated pstops filter to use strict handling of EPS
	  files embedded in a PostScript document.  The %%EOF